<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/linear_layout_padding">

    <androidx.cardview.widget.CardView
        android:id="@+id/spassky_theater"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/card_margin"
        style="@style/CardView.Light"
        android:onClick="CardClick">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/relative_padding">
            <ImageView
                android:id="@+id/spassky_image"
                android:layout_width="@dimen/image_view_width"
                android:layout_height="@dimen/image_view_height"
                android:layout_margin="@dimen/relative_margin"
                android:src="@drawable/spassky_theatre" />
            <TextView
                android:id="@+id/spassky_name"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_toEndOf="@id/spassky_image"
                android:layout_margin="@dimen/relative_margin"
                android:textSize="@dimen/theater_name_size"
                android:text="@string/spassky_name" />
            <TextView
                android:id="@+id/spassky_address"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_toEndOf="@id/spassky_image"
                android:layout_below="@id/spassky_name"
                android:layout_margin="@dimen/relative_margin"
                android:textSize="@dimen/theater_address_size"
                android:text="@string/spassky_address" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/drama_theater"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_margin="@dimen/card_margin"
        style="@style/CardView.Light"
        android:onClick="CardClick">

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:padding="@dimen/relative_padding">
            <ImageView
                android:id="@+id/drama_image"
                android:layout_height="@dimen/image_view_height"
                android:layout_width="@dimen/image_view_width"
                android:layout_margin="@dimen/relative_margin"
                android:src="@drawable/drama_theatre" />
            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_margin="@dimen/relative_margin">
                <TextView
                    android:id="@+id/drama_name"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:textSize="@dimen/theater_name_size"
                    android:text="@string/drama_name" />
                <TextView
                    android:id="@+id/drama_address"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:layout_marginTop="@dimen/relative_margin"
                    android:textSize="@dimen/theater_address_size"
                    android:text="@string/drama_address" />
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/dolls_theater"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_margin="@dimen/card_margin"
        style="@style/CardView.Light"
        android:onClick="CardClick">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:padding="@dimen/relative_padding">
            <ImageView
                android:id="@+id/dolls_image"
                android:layout_height="@dimen/image_view_height"
                android:layout_width="@dimen/image_view_width"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="@dimen/relative_margin"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginStart="@dimen/relative_margin"
                android:src="@drawable/dolls_theatre" />
            <TextView
                android:id="@+id/dolls_name"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="@dimen/relative_margin"
                app:layout_constraintLeft_toRightOf="@id/dolls_image"
                android:layout_marginStart="@dimen/relative_margin"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginEnd="@dimen/relative_margin"
                android:textSize="@dimen/theater_name_size"
                android:text="@string/dolls_name" />
            <TextView
                android:id="@+id/dolls_address"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                app:layout_constraintTop_toBottomOf="@id/dolls_name"
                android:layout_marginTop="@dimen/relative_margin"
                app:layout_constraintLeft_toRightOf="@id/dolls_image"
                android:layout_marginStart="@dimen/relative_margin"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginEnd="@dimen/relative_margin"
                android:textSize="@dimen/theater_address_size"
                android:text="@string/dolls_address" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>